[project]
name = "nppy"
version = "0.2.0"
requires-python = ">=3.7"
description = "Neural Pre-Processing: A Learning Framework for End-to-end Brain MRI Pre-processing."
readme = "readme.md"
license = { file = "LICENSE" }
authors = [
    { name = "Xinzi He", email = "xh278@cornell.edu"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
keywords = [
    'deep learning',
    'brain MRI',
    'MRI preprocessing',
    'neural pre-processing',
    'nppy'
]

dependencies = [
    "aiohttp",
    "aiosignal",
    "async-timeout",
    "attrs",
    "certifi",
    "charset-normalizer",
    "click",
    "colorama",
    "Deprecated",
    "einops",
    "filelock",
    "frozenlist",
    "fsspec",
    "huggingface-hub",
    "humanize",
    "idna",
    "importlib-resources",
    "Jinja2",
    "lightning-utilities",
    "markdown-it-py",
    "MarkupSafe",
    "mdurl",
    "mpmath",
    "multidict",
    "networkx",
    "nibabel",
    "numpy",
    "packaging",
    "Pillow",
    "pydicom",
    "Pygments",
    "pytorch-lightning",
    "PyYAML",
    "requests",
    "rich",
    "scipy",
    "shellingham",
    "SimpleITK",
    "surfa",
    "sympy",
    "torch",
    "torchio",
    "torchmetrics",
    "tqdm",
    "typer",
    "typing_extensions",
    "urllib3",
    "wrapt",
    "xxhash",
    "yarl",
    "zipp"
]

[project.urls]
homepage = "https://github.com/Novestars"
repository = "https://github.com/Novestars/Neural_Pre_Processing"

[project.scripts]
# You can add your script entry points here, e.g.
nppy = "inference.nppy_inference:main"

[tool.codespell]
skip = '.git,*.pdf,*.svg'
# ignore-words-list = ''
[tool.setuptools.packages.find]
where = ["nppy"]
#include = ["*"]
